--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,9 +3,7 @@ name: Publish Python Package
 on:
   push:
     branches:
-      - main
-    tags:
-      - 'v*'
+      - 'release/**'
 
 jobs:
   build-and-publish:
